Simplify simulation start definition

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -100,22 +100,19 @@
    "outputs": [],
    "source": [
     "xy_start = torch.tensor([0., -4.]).requires_grad_().to(device)\n",
-    "q_start = transforms.inverse_kinematics(rp, xy_start, is_clockwise=model_cw).unsqueeze(0)\n",
-    "#q_start = torch.tensor([[-torch.pi/2, -torch.pi/2+0.1]]).requires_grad_().to(device)\n",
+    "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
-    "#q_d_start = torch.tensor([[0.5, 0.5]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
     "is_clockwise_start = transforms.check_clockwise(q_start.squeeze(0))\n",
     "\n",
     "xy_des_real = torch.tensor([2., -2.]).requires_grad_().to(device)\n",
-    "q_des = transforms.inverse_kinematics(rp, xy_des_real, is_clockwise=model_cw).unsqueeze(0)\n",
-    "#q_des = torch.tensor([[-torch.pi/2, -torch.pi/4]]).requires_grad_().to(device)\n",
+    "q_des = transforms.inverse_kinematics(xy_des_real, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "q_d_des = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
     "th_start = model.encoder_vmap(q_start)\n",
     "th_d_start = (model.jacobian_enc(q_start) @ q_d_start.T).T\n",
-    "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas\n",
+    "th_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device) #TODO: Obtain accelerations in thetas. Do I care?\n",
     "\n",
     "is_clockwise_des = transforms.check_clockwise(q_des.squeeze(0))\n",
     "\n",
@@ -151,7 +148,6 @@
     "th_d = th_d_start\n",
     "th_dd = th_dd_start\n",
     "\n",
-    "print(th_start)\n",
     "q_est = model.decoder(th_start, clockwise=is_clockwise_start)\n",
     "q_d_est = (model.jacobian_dec(th_start, clockwise=is_clockwise_start) @ th_d_start.T).T\n",
     "q_dd_est = torch.zeros((1,2))\n",
