Clarify code and expand JSON

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -57,6 +57,7 @@
     "    model_location = '../Learning/Models/Lumped_Mass_ccw_12k_epochs.pth'\n",
     "    model.load_state_dict(torch.load(model_location, weights_only=True))\n",
     "else:\n",
+    "    model_location = \"N/A\"\n",
     "    model = autoencoders.Analytic_transformer(rp)"
    ]
   },
@@ -184,10 +185,10 @@
     "    th = model.encoder_vmap(q)\n",
     "    th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
     "    \n",
+    "    \"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\n",
     "    J_h = model.jacobian_enc(q)\n",
     "    J_h_trans = torch.transpose(J_h, 0, 1)\n",
-    "\n",
     "    is_clockwise = transforms.check_clockwise(q.squeeze(0))\n",
     "    \n",
     "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
@@ -213,8 +214,6 @@
     "    tau_q_real = A_q_real * u\n",
     "\n",
     "    q_dd_real = (torch.pinverse(M_q_real) @ (tau_q_real - C_q_real @ ((q_d_real).T)- G_q_real)).T  #  - C_damp @ ((q_d_real).T) \n",
-    "\n",
-    "    \n",
     "    q_d_real = q_d_real + q_dd_real * dt\n",
     "    q_real = q_real + q_d_real * dt\n",
     "    q_real = transforms.wrap_to_pi(q_real)\n",
@@ -278,13 +277,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "save_dir = f\"results_collocated/simulation_{timestamp}\"\n",
+    "save_dir = f\"collocated_results/simulation_{timestamp}\"\n",
     "os.makedirs(save_dir, exist_ok=True)\n",
     "print(xy_start[1])\n",
     "print(Kp[0,0].item())\n",
     "metadata = {\n",
     "    \"timestamp\": timestamp,\n",
     "    \"Learned transform\": neural_net,\n",
+    "    \"Model location\": model_location,\n",
     "    \"Model clockwise\": model_cw,\n",
     "    \"Model shifting\": model_shifting, \n",
     "    \"PD gains\": {\n",
