Fix bug for flipping q_d

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -175,7 +175,7 @@
     "    if fix_q and model_cw != is_clockwise:\n",
     "        print(\"fixing value to\", \"clockwise\" if model_cw else \"counterclockwise\")\n",
     "        q = transforms.flip_q(rp, q_real.squeeze(0), model_cw).unsqueeze(0)\n",
-    "        q_d = transforms.flip_q_d(rp, q_real, q_d_real, model_cw)\n",
+    "        q_d = transforms.flip_q_d(rp, q_real.squeeze(0), q_d_real, model_cw)\n",
     "    else:\n",
     "        q = q_real\n",
     "        q_d = q_d_real\n",
