--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -46,11 +46,15 @@
    "source": [
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
-    "neural_net = True\n",
+    "neural_net = False\n",
     "\n",
     "fix_q = True\n",
     "model_cw = False\n",
     "model_shifting = True\n",
+    "\n",
+    "if fix_q and not neural_net:\n",
+    "    fix_q = False\n",
+    "    print(\"Analytic transform used, so fix_q set to False. Did you check your inputs properly?\")\n",
     "\n",
     "if neural_net:\n",
     "    model = autoencoders.Autoencoder_double(rp).to(device)\n",
@@ -100,7 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "xy_start = torch.tensor([0., -4.]).requires_grad_().to(device)\n",
+    "xy_start = torch.tensor([0., -1.1]).requires_grad_().to(device)\n",
     "q_start = transforms.inverse_kinematics(xy_start, rp, is_clockwise=model_cw).unsqueeze(0)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
@@ -124,7 +128,7 @@
     "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
     "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
     "\n",
-    "print(model.jacobian_enc(q_start))"
+    "print(q_start)"
    ]
   },
   {
@@ -142,7 +146,7 @@
     "\n",
     "\n",
     "dt = 0.01\n",
-    "t_end = 2\n",
+    "t_end = 5\n",
     "t_series = torch.arange(0, t_end, dt)\n",
     "\n",
     "th = th_start\n",
