--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -189,6 +189,9 @@
     "    th = model.encoder_vmap(q)\n",
     "    th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
     "    \n",
+    "    q = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "    q_d = (model.jacobian_dec(th) @ th_d.T).T\n",
+    "\n",
     "    \"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\n",
     "    J_h = model.jacobian_enc(q)\n",
