Rename dynamical matrices for clarity

--- a/Kian_code/Controllers/collocated.ipynb
+++ b/Kian_code/Controllers/collocated.ipynb
@@ -201,14 +201,14 @@
     "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
     "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
-    "    M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
-    "    A_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "    M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "    A_q_est = dynamics.input_matrix(rp, q.squeeze(0))\n",
     "\n",
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
     "\n",
-    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
+    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
     "\n",
     "    u = torch.pinverse(A_th) @ ((Kp @ (th_des - th).T + Kd @ (th_d_des - th_d).T))\n",
     "    u = u + torch.pinverse(A_th) @ G_th\n",
