Small changes for testing

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -48,11 +48,15 @@
    "source": [
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
     "plotter = pendulum_plot.Anim_plotter(rp)\n",
-    "neural_net = True\n",
-    "\n",
+    "neural_net = False\n",
+    "#rp[\"m1\"] = 0.\n",
     "fix_q = True\n",
     "model_cw = False\n",
     "model_shifting = True\n",
+    "\n",
+    "if fix_q and not neural_net:\n",
+    "    fix_q = False\n",
+    "    print(\"Analytic transform used, so fix_q set to False. Did you check your inputs properly?\")\n",
     "\n",
     "if neural_net:\n",
     "    model = autoencoders.Autoencoder_double(rp).to(device)\n",
