Move gain definitions to have desired state Y

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -90,9 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "K = torch.tensor([[1., 1., 1., 1.]]).to(device)\n",
-    "\n",
-    "xy_start = torch.tensor([0., -4.]).requires_grad_().to(device)\n",
+    "xy_start = torch.tensor([-2., -4.]).requires_grad_().to(device)\n",
     "q_d_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "q_dd_start = torch.tensor([[0., 0.]]).requires_grad_().to(device)\n",
     "\n",
@@ -103,7 +101,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "k_spring = 10."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +129,27 @@
     "\n",
     "q_des_est = model.decoder_vmap(th_des, is_clockwise_des)\n",
     "q_d_des_est = (model.jacobian_dec(th_des, clockwise=is_clockwise_des) @ th_d_des.T).T\n",
-    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])"
+    "xy_des_est, _ = transforms.forward_kinematics(rp, q_des_est[0])\n",
+    "\n",
+    "print(q_start)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "J_h_inv_des = model.jacobian_dec(th_des, is_clockwise_des).squeeze(0)\n",
+    "J_h_inv_trans_des = torch.transpose(J_h_inv_des, 0, 1)\n",
+    "\n",
+    "M_q_des, C_q_des, G_q_des = dynamics.dynamical_matrices(rp, q_des.squeeze(0), q_d_des.squeeze(0))\n",
+    "G_q__des = dynamics.add_spring_force_G_q(rp, q_des, G_q_des, k_spring)\n",
+    "M_th_des, C_th_des, G_th_des = transforms.transform_dynamical_from_inverse(M_q_des, C_q_des, G_q_des, th_des, th_d_des, J_h_inv_des, J_h_inv_trans_des)\n",
+    "print(\"M_th_des:\\n\", M_th_des)\n",
+    "K = torch.tensor([[1., 1., 1., 1.]]).to(device)\n",
+    "Y_des = normal_form.calculate_Y(th_des, th_d_des, M_th_des, C_th_des, G_th_des, device)\n",
+    "print(Y_des)"
    ]
   },
   {
