Add animation plotter

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -274,6 +274,120 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "xy_real_series = torch.empty((0,2)).to(device)\n",
+    "xy_est_series = torch.empty((0,2)).to(device)\n",
+    "xy_naive_series = torch.empty((0,2)).to(device)\n",
+    "\n",
+    "#for q_real, q_est, q_naive in zip(q_real_series, q_est_series, q_naive_series):\n",
+    "for q_real, q_est in zip(q_real_series, q_est_series):\n",
+    "    xy_real, _ = transforms.forward_kinematics(rp, q_real)\n",
+    "    xy_real_series = torch.cat((xy_real_series, xy_real.unsqueeze(0)))\n",
+    "    xy_est, _ = transforms.forward_kinematics(rp, q_est)\n",
+    "    xy_est_series = torch.cat((xy_est_series, xy_est.unsqueeze(0)))\n",
+    "    #xy_naive, _ = transforms.forward_kinematics(rp, q_naive)\n",
+    "    #xy_naive_series = torch.cat((xy_naive_series, xy_naive.unsqueeze(0)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_dir = f\"non-collocated_results/simulation_{timestamp}\"\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
+    "print(\"save_dir:\", save_dir)\n",
+    "\n",
+    "stride = 1\n",
+    "pos_end_q_real, pos_elbow_q_real = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_real_series[::stride])\n",
+    "pos_end_q_est, pos_elbow_q_est = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_est_series[::stride])\n",
+    "#pos_end_q_naive, pos_elbow_q_naive = torch.vmap(transforms.forward_kinematics, in_dims=(None, 0))(rp, q_naive_series[::stride])\n",
+    "\n",
+    "frames_q_real = plotter.frame_pendulum(pos_end_q_real, pos_elbow_q_real)\n",
+    "frames_q_est = plotter.frame_pendulum(pos_end_q_est, pos_elbow_q_est)\n",
+    "#frames_q_naive = plotter.frame_pendulum(pos_end_q_naive, pos_elbow_q_naive)\n",
+    "\n",
+    "data_real = {\n",
+    "    \"frames\": frames_q_real,\n",
+    "    \"times\": dt,\n",
+    "    \"name\": \"q_real\", \n",
+    "    \"arm_color\": \"tab:blue\",\n",
+    "    \"act_color\": \"tab:cyan\"\n",
+    "}\n",
+    "\n",
+    "data_est = {\n",
+    "    \"frames\": frames_q_est,\n",
+    "    \"times\": dt,\n",
+    "    \"name\": \"q_est\",\n",
+    "    \"arm_color\": \"tab:orange\", \n",
+    "    \"act_color\": \"tab:red\"\n",
+    "} \n",
+    "\n",
+    "\"\"\"\n",
+    "data_naive = {\n",
+    "    \"frames\": frames_q_naive,\n",
+    "    \"times\": dt,\n",
+    "    \"name\": \"q_naive\",\n",
+    "    \"arm_color\": \"tab:green\", \n",
+    "    \"act_color\": \"tab:olive\"\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "ref_pos_real = {\n",
+    "    \"pos\": xy_des_real,\n",
+    "    \"name\": \"real\",\n",
+    "    \"color\": \"tab:blue\"\n",
+    "}\n",
+    "\n",
+    "ref_pos_est = {\n",
+    "    \"pos\": xy_des_est,\n",
+    "    \"name\": \"est\",\n",
+    "    \"color\": \"tab:orange\"\n",
+    "}\n",
+    "\n",
+    "\"\"\"\n",
+    "ref_pos_naive = {\n",
+    "    \"pos\": xy_des_real,\n",
+    "    \"name\": \"naive\",\n",
+    "    \"color\": \"tab:green\"\n",
+    "}\n",
+    "\"\"\"\n",
+    "\n",
+    "ref_poss = [ref_pos_real]#, ref_pos_est]#, ref_pos_naive]\n",
+    "\n",
+    "frames_data = [data_real, data_est]#, data_naive]\n",
+    "#frames_data = [data_est]\n",
+    "#frames_data = [data_real]\n",
+    "\n",
+    "name_rp = \"RP:(\" + str(rp[\"xa\"]) + \",\" + str(rp[\"ya\"]) + \")_\"\n",
+    "name_ref = \"ref:(\" + str(xy_des_real[0].item()) + \",\" + str(xy_des_real[1].item()) + \")_\"\n",
+    "\n",
+    "if neural_net:\n",
+    "    model_type = \"NN\"\n",
+    "else:\n",
+    "    model_type = \"AL\"\n",
+    "\n",
+    "file_name = \"t_end:[\" + str(t_end) + \"]_dt:[\" + str(dt) + \"]_stride:[\" + str(stride) + \"]_0.mp4\"\n",
+    "file_counter = 0\n",
+    "\n",
+    "output_path = os.path.join(save_dir, file_name)\n",
+    "\n",
+    "while os.path.isfile(output_path):\n",
+    "    print(\"file name already exists\")\n",
+    "    file_counter += 1\n",
+    "    file_name = file_name[:-6] + \"_\" + str(file_counter) + \".mp4\"\n",
+    "    output_path = os.path.join(save_dir, file_name)\n",
+    "    \n",
+    "plotter.animate_pendulum(frames_data, ref_poss=ref_poss, plot_actuator=True, save_path=output_path, fps = 0.1/(dt*stride), dt = dt*stride)\n",
+    "#plotter.animate_pendulum(frames_data, ref_pos=None, plot_actuator=False, file_name=file_name, fps = 1/(dt*stride), dt = dt*stride)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
