Calculate q from theta for torch gradients

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -208,6 +208,9 @@
     "\n",
     "    th = model.encoder_vmap(q)\n",
     "    th_d = (model.jacobian_enc(q) @ q_d.T).T\n",
+    "\n",
+    "    q = model.decoder_vmap(th, clockwise=model_cw)\n",
+    "    q_d = (model.jacobian_dec(th) @ th_d.T).T\n",
     "    \n",
     "    \"\"\" Obtain Jacobian, dynamical matrices\"\"\"\n",
     "\n",
