--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -219,13 +219,21 @@
     "    J_h_inv = model.jacobian_dec(th, is_clockwise).squeeze(0)\n",
     "    J_h_inv_trans = torch.transpose(J_h_inv, 0, 1)\n",
     "\n",
-    "    M_q, C_q, G_q = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
-    "    A_q = dynamics.input_matrix(rp, q.squeeze(0))\n",
+    "    print(\"q:\", q)\n",
+    "    print(\"q_d:\", q_d)\n",
+    "    print(\"th:\", th)\n",
+    "    print(\"th_d:\", th_d)\n",
+    "\n",
+    "\n",
+    "    M_q_est, C_q_est, G_q_est = dynamics.dynamical_matrices(rp, q.squeeze(0), q_d.squeeze(0))\n",
+    "    G_q_est = dynamics.add_spring_force_G_q(rp, q, G_q_est, k_spring)\n",
+    "    A_q_est = dynamics.input_matrix(rp, q.squeeze(0))\n",
     "\n",
     "\n",
     "    \"\"\" Feed-forward simulation of the system, not on real dynamics \"\"\"\n",
-    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q, C_q, G_q, th, th_d, J_h_inv, J_h_inv_trans)\n",
-    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q, J_h_inv_trans, device)\n",
+    "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
+    "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
+    "\n",
     "\n",
     "    Y, y_iv, v, u = normal_form.calculate_Y(th, th_d, M_th, C_th, G_th, A_th, K, device)\n",
     "    u = u + torch.pinverse(A_th) @ G_th\n",
