Change calculation of Y, v, u to fit with normal_form.py

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -234,9 +234,17 @@
     "    M_th, C_th, G_th = transforms.transform_dynamical_from_inverse(M_q_est, C_q_est, G_q_est, th, th_d, J_h_inv, J_h_inv_trans)\n",
     "    A_th = transforms.transform_input_matrix_from_inverse_trans(A_q_est, J_h_inv_trans, device)\n",
     "\n",
+    "    Y = normal_form.calculate_Y(th, th_d, M_th, C_th, G_th, device)\n",
+    "    alpha, beta = normal_form.calculate_alpha_beta(th, th_d, M_th, C_th, G_th, A_th, Y)\n",
+    "    v = normal_form.calculate_v(Y, Y_des, K)\n",
+    "    u = normal_form.calculate_u(alpha, beta, v)\n",
+    "    #u = torch.tensor([[0]]).to(device)\n",
+    "    #u = u + torch.pinverse(A_th) @ G_th #Gravity compensation\n",
     "\n",
-    "    Y, y_iv, v, u = normal_form.calculate_Y(th, th_d, M_th, C_th, G_th, A_th, K, device)\n",
-    "    u = u + torch.pinverse(A_th) @ G_th\n",
+    "    print(\"Y:\", Y)\n",
+    "    print(\"alpha, beta:\", alpha, beta)\n",
+    "    print(\"v:\", v)\n",
+    "    print(\"u:\", u)\n",
     "\n",
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
