Add spring force

--- a/Kian_code/Controllers/non-collocated.ipynb
+++ b/Kian_code/Controllers/non-collocated.ipynb
@@ -249,6 +249,7 @@
     "    \"\"\" Update the real system and apply latent control input. \"\"\"\n",
     "\n",
     "    M_q_real, C_q_real, G_q_real = dynamics.dynamical_matrices(rp, q_real.squeeze(0), q_d_real.squeeze(0))\n",
+    "    #G_q_real = dynamics.add_spring_force_G_q(rp, q_real, G_q_real, k_spring, gamma_spring)\n",
     "    A_q_real = dynamics.input_matrix(rp, q_real.squeeze(0))\n",
     "\n",
     "    tau_q_real = A_q_real * u\n",
