Small changes to fit with renamed files

--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -27,16 +27,16 @@
     "import torch.nn as nn\n",
     "import torch.optim as optim\n",
     "from torch.utils.data import TensorDataset, Dataset, DataLoader\n",
-    "import functorch\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import os\n",
     "from datetime import datetime\n",
     "import time\n",
+    "import json\n",
     "\n",
-    "import Double_Pendulum.Lumped_Mass.robot_parameters as robot_parameters\n",
-    "import Double_Pendulum.Lumped_Mass.transforms as transforms\n",
-    "import Double_Pendulum.Lumped_Mass.dynamics as dynamics\n",
+    "import Double_Pendulum.robot_parameters as robot_parameters\n",
+    "import Double_Pendulum.transforms as transforms\n",
+    "import Double_Pendulum.dynamics as dynamics\n",
     "\n",
     "import training_data as training_data\n",
     "import Plotting.theta_visualiser as theta_visualizer\n",
