Move loss terms for .json creation

--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -212,6 +212,15 @@
    "source": [
     "import torch.nn.functional as F\n",
     "\n",
+    "f_recon        = 10.\n",
+    "f_diag         = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "f_off_diag     = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "f_input        = 1.\n",
+    "f_input_jac    = 1.\n",
+    "f_theta        = 1.\n",
+    "f_inertia_eye  = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "\n",
+    "\n",
     "def loss_fun(q, theta, q_hat, M_q, A_q, J_h_enc, J_h_dec):\n",
     "\n",
     "    \"\"\"\n",
@@ -256,23 +265,15 @@
     "    \n",
     "    #print(torch.eye(M_th.size(-1)))]).\n",
     "    M_eye = torch.eye(M_th.size(-1), device=M_th.device, dtype=M_th.dtype).expand(M_th.size())\n",
-    "    l_inertia = F.mse_loss(M_th, M_eye, reduction=\"mean\")\n",
-    "\n",
-    "    f_recon        = 10.\n",
-    "    f_diag         = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
-    "    f_off_diag     = 1. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
-    "    f_input        = 1.\n",
-    "    f_input_jac    = 1.\n",
-    "    f_theta        = 1.\n",
-    "    f_inertia      = 0. #TODO: CHECK OUT THESE LOSS WEIGHTS\n",
+    "    l_inertia_eye = F.mse_loss(M_th, M_eye, reduction=\"mean\")\n",
     "    \n",
     "    #loss_terms = torch.tensor([l_recon * f_recon, l_diag * f_diag, l_off_diag * f_off_diag, \n",
     "    #                           l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
     "    #loss_sum = l_recon * f_recon + l_diag * f_diag + l_off_diag * f_off_diag + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
     "\n",
-    "    loss_terms = torch.tensor([l_recon * f_recon, l_inertia * f_inertia, \n",
+    "    loss_terms = torch.tensor([l_recon * f_recon, l_inertia_eye * f_inertia_eye, \n",
     "                               l_input * f_input, l_input_jac * f_input_jac, l_theta * f_theta])\n",
-    "    loss_sum = l_recon * f_recon + l_inertia * f_inertia + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
+    "    loss_sum = l_recon * f_recon + l_inertia_eye * f_inertia_eye + l_input * f_input + l_input_jac * f_input_jac + l_theta * f_theta\n",
     "\n",
     "    return loss_sum, loss_terms"
    ]
