Rework model and figure save paths to be more organised

--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -289,32 +289,61 @@
     "#model.load_state_dict(torch.load(load_path, weights_only=True))\n",
     "\n",
     "\n",
-    "def train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, val_dataloader, current_time):\n",
+    "def train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, val_dataloader, current_time, dir_name = None):\n",
     "\n",
     "    \"\"\"\n",
     "    Executes training loop for Autoencoder\n",
     "    \"\"\"\n",
-    "   \n",
-    "    model = autoencoders.Autoencoder_double(rp).to(device)  # Move model to GPU\n",
+    "    if dir_name is None:\n",
+    "        model = autoencoders.Autoencoder_double(rp).to(device)  # Move model to GPU\n",
+    "        dir_name = f\"NN_{current_time}\"\n",
+    "        file_counter = 0\n",
+    "    else:\n",
+    "        dir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
+    "        nn_filename = dir_name + \"_0.pth\"\n",
+    "        nn_filepath = os.path.join(dir_path, nn_filename)\n",
+    "        file_counter = 0\n",
+    "        while os.path.isfile(nn_filepath):\n",
+    "            print(\"Looking for latest weights and bias file.\")\n",
+    "            file_counter += 1\n",
+    "            nn_filename = nn_filename[:-6] + \"_\" + str(file_counter) + \".pth\"\n",
+    "            nn_filepath = os.path.join(dir_path, nn_filename)\n",
+    "\n",
+    "        model_path = os.path.join(\"Models\", dir_name, dir_name + \"_\" + str(file_counter-1) + \".pth\")\n",
+    "        model = autoencoders.Autoencoder_double(rp).to(device)  # Initialize model architecture\n",
+    "        model.load_state_dict(torch.load(model_path, weights_only=True, map_location=device))  # Load weights\n",
+    "\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=lr)#,  weight_decay=1e-6)\n",
     "    scheduler = torch.optim.lr_scheduler.ExponentialLR(optimizer, gamma=0.5 ** (1 / num_epochs))\n",
     "\n",
     "\n",
     "    train_losses = []\n",
     "    val_losses = []\n",
-    "    start_time = time.time()\n",
-    "    save_directory = os.path.join(os.getcwd(), \"Models\")\n",
-    "    dir_name = f\"NN_{current_time}\"\n",
-    "    dir_path = os.path.join(save_directory, dir_name)\n",
+    "    start_time = time.time()       \n",
+    "    dir_path = os.path.join(os.getcwd(), \"Models\", dir_name)\n",
     "    os.makedirs(dir_path, exist_ok=True)\n",
-    "    file_name = f\"NN_{current_time}\" + \".pth\"\n",
-    "    file_path = os.path.join(dir_path, file_name)\n",
+    "    nn_filename = dir_name + \"_\" + str(file_counter) + \".pth\"\n",
+    "    nn_filepath = os.path.join(dir_path, nn_filename)\n",
     "\n",
-    "    JSON = {\"q1_low\" : q1_split[0],\n",
-    "            \"q1_high\" : q1_split[1],\n",
-    "            \"lr\" : lr,\n",
-    "            \"epochs\" : num_epochs,\n",
-    "            \"file_name\" : file_name}\n",
+    "    metadata = {\"q1_low\" : q1_split[0],\n",
+    "                \"q1_high\" : q1_split[1],\n",
+    "                \"lr\" : lr,\n",
+    "                \"epochs\" : num_epochs,\n",
+    "                \"file_name\" : nn_filename,\n",
+    "                \"loss_weights\": {\n",
+    "                    \"f_recon\": f_recon,\n",
+    "                    \"f_diag\": f_diag,\n",
+    "                    \"f_off_diag\": f_off_diag,\n",
+    "                    \"f_input\": f_input,\n",
+    "                    \"f_input_jac\": f_input_jac,\n",
+    "                    \"f_theta\": f_theta,\n",
+    "                    \"f_inertia_eye\": f_inertia_eye\n",
+    "                }}\n",
+    "    \n",
+    "    metadata_filename = \"metadata_\" + str(file_counter) + \".json\"\n",
+    "    metadata_filepath = os.path.join(dir_path, metadata_filename)\n",
+    "    with open(metadata_filepath, \"w\") as f:\n",
+    "        json.dump(metadata, f, indent=4)\n",
     "\n",
     "    for epoch in range(num_epochs):\n",
     "\n",
@@ -378,7 +407,7 @@
     "            f'l_recon: {tlt[0]:.4f}, l_inertia: {tlt[1]:.4f}, l_input: {tlt[2]:.4f}, l_input_jac: {tlt[3]:.4f}, l_theta: {tlt[4]:.4f}'\n",
     "        )\n",
     "        \n",
-    "    return(model, train_losses, val_losses, dir_path, file_path)\n"
+    "    return(model, train_losses, val_losses, dir_path, nn_filepath, file_counter)\n"
    ]
   },
   {
@@ -457,9 +486,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_model_performance(model, plot_dataloader):\n",
+    "def plot_model_performance(model, plot_dataloader, folder_path):\n",
     "\n",
     "    model_ana = autoencoders.Analytic_transformer(rp)\n",
+    "\n",
+    "    os.makedirs(folder_path, exist_ok=True)\n",
     "\n",
     "    model.eval()\n",
     "    with torch.no_grad():\n",
@@ -551,9 +582,13 @@
     "train_part = 0.7\n",
     "\n",
     "rp = robot_parameters.LUMPED_PARAMETERS\n",
-    "num_epochs = 1001\n",
+    "num_epochs = 101\n",
     "lr = 1e-3\n",
     "\n",
+    "# IMPORTANT:\n",
+    "# If you want to train on an existing model\n",
+    "existing_model_name = \"NN_202503231956\"\n",
+    "existing_model_name = None\n",
     "\n",
     "plt.ion()\n",
     "\n",
@@ -564,18 +599,23 @@
     "dataset = make_dataset(shifted_points)\n",
     "(train_dataloader, val_dataloader) = make_dataloaders(dataset=dataset, batch_size=batch_size, train_part=train_part)\n",
     "outputs = []\n",
-    "model, train_losses, val_losses, dir_path, file_path = train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, \n",
-    "                                                        val_dataloader, current_time)\n",
-    "points_path = os.path.join(dir_path, \"points.png\")\n",
+    "model, train_losses, val_losses, dir_path, nn_filepath, file_counter = train_AE_model(rp, device, lr, num_epochs, q1_split, train_dataloader, \n",
+    "                                                        val_dataloader, current_time, existing_model_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ec749cee",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "points_path = os.path.join(dir_path, \"training_points_\" + str(file_counter) + \".png\")\n",
     "points_plotter(shifted_points, save = True, file_path = points_path)\n",
-    "fig_path = os.path.join(dir_path, \"loss.png\")\n",
-    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = fig_path)\n",
-    "mapping_functions = (partial(theta_1_single,model), \n",
-    "                        partial(theta_2_single,model), \n",
-    "                        partial(q_hat_1_single,model), \n",
-    "                        partial(q_hat_2_single,model))\n",
-    "\n",
-    "save_model(model, file_path)\n"
+    "scatter_fig_path = os.path.join(dir_path, \"loss_\" + str(file_counter) + \".png\")\n",
+    "plot_loss(train_losses, val_losses, log = True, save = True, file_path = scatter_fig_path)\n",
+    "save_model(model, nn_filepath)\n",
+    "print(nn_filepath)"
    ]
   },
   {
@@ -600,6 +640,7 @@
    "source": [
     "%matplotlib widget\n",
     "\n",
+    "folder_path = os.path.join(dir_path, \"performance_plots_\" + str(file_counter))\n",
     "\n",
     "q1_split = (-torch.pi, torch.pi)\n",
     "plt.ion()\n",
@@ -610,13 +651,13 @@
     "points_plotter(plot_points[::5])\n",
     "plot_dataset = make_dataset(plot_points)\n",
     "plot_dataloader = make_plot_dataloader(plot_dataset)\n",
-    "plot_model_performance(model, plot_dataloader)"
+    "plot_model_performance(model, plot_dataloader, folder_path)\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2419d60",
+   "id": "0e667f4a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -629,6 +670,8 @@
     "\n",
     "models = [model_ana, model]\n",
     "model_names = [\"Analytic\", \"Neural Network\"]\n",
+    "\n",
+    "theta_xy_fig_path = os.path.join(dir_path, \"theta_vs_q\" + str(file_counter) + \".png\")\n",
     "\n",
     "def check_clockwise_vectorized(q):\n",
     "    \"\"\"\n",
@@ -707,25 +750,10 @@
     "  axes[1].set_ylabel(\"y\")\n",
     "  plt.colorbar(sc4, ax=axes[1])\n",
     "\n",
-    "  plt.tight_layout()\n",
-    "  plt.show()\n"
+    "plt.tight_layout()\n",
+    "plt.savefig(theta_xy_fig_path)\n",
+    "plt.show()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ffd42adf",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c1fb8106",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
