Made plots more organised, see also plotters_simple.plot_3d_quad

--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -515,31 +515,30 @@
     "            A_th_ana = (J_h_inv_trans_ana @ A_q).squeeze(-1)\n",
     "\n",
     "            \n",
-    "            plotters_simple.plot_3d_double(q, theta_ana[:, 0], theta[:, 0], \"th0\", \"analytical\", \"learned\", \"q_0\", \"q_1\", \"th0\", device)\n",
-    "            plotters_simple.plot_3d_double(q, theta_ana[:, 1], theta[:, 1], \"th1\", \"analytical\", \"learned\", \"q_0\", \"q_1\", \"th1\", device)\n",
+    "            plotters_simple.plot_3d_quad(q, [theta_ana[:, 0], theta[:, 0], theta_ana[:, 1], theta[:, 1]], \"Analytic vs learned theta\", \n",
+    "                                         [\"th0_ana\", \"th0_learned\", \"th_1_ana\", \"th_1_learned\"], \"q_0\", \"q_1\", \"th\", folder_path)\n",
+    "            \n",
     "\n",
     "\n",
-    "            plotters_simple.plot_3d_double(q, A_th[:, 0], A_th[:, 1], \"Input decoupling\", \"A0\", \"A1\", \"q_0\", \"q_1\", \"A\", device)\n",
-    "            plotters_simple.plot_3d_double(q, A_th_ana[:, 0], A_th_ana[:, 1], \"Input decoupling ana\", \"A0\", \"A1\", \"q_0\", \"q_1\", \"A\", device)\n",
+    "            plotters_simple.plot_3d_double(q, [A_th[:, 0], A_th[:, 1]], \"Input decoupling\", [\"A0\", \"A1\"], \"q_0\", \"q_1\", \"A\", folder_path)\n",
+    "            \n",
     "            A_th = A_th.cpu().detach().numpy()\n",
     "            print(\"Percentage of abs(A_0) > 0.6:\", 100 * np.sum(np.abs(A_th[:, 0]) > 0.6)/A_th[:, 0].size, \"%\")\n",
     "            print(\"Percentage of abs(A_1) < 0.3:\", 100 * np.sum(np.abs(A_th[:, 1]) < 0.3)/A_th[:, 1].size, \"%\")\n",
     "            \n",
-    "            #plotters_simple.plot_3d_double(q, M_th[:, 0, 0], M_th[:, 0, 1], \"M_th\", \"00\", \"01\", \"q_0\", \"q_1\", \"M_th\", device)\n",
-    "            #plotters_simple.plot_3d_double(q, M_th[:, 1, 0], M_th[:, 1, 1], \"M_th\", \"10\", \"11\", \"q_0\", \"q_1\", \"M_th\", device)\n",
+    "            plotters_simple.plot_3d_quad(q, [M_th[:, 0, 0], M_th[:, 0, 1], M_th[:, 1, 0], M_th[:, 1, 1]], \"M_th vs q\", \n",
+    "                                         [\"M_th[0,0]\", \"M_th[0,1]\", \"M_th[1,0]\", \"M_th[1,1]\"], \"q_0\", \"q_1\", \"M_th\", folder_path)\n",
     "            M_th_cpu = M_th.cpu().detach().numpy()\n",
-    "            #print(\"Percentage of abs(M_00) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 0]) > 1.0)/M_th_cpu[:, 0, 0].size, \"%\")\n",
-    "            #print(\"Percentage of abs(M_01) < 0.2:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 1]) < 0.2)/M_th_cpu[:, 0, 1].size, \"%\")\n",
-    "            #print(\"Percentage of abs(M_11) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 1, 1]) > 1.0)/M_th_cpu[:, 1, 1].size, \"%\")\n",
+    "            print(\"Percentage of abs(M_00) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 0]) > 1.0)/M_th_cpu[:, 0, 0].size, \"%\")\n",
+    "            print(\"Percentage of abs(M_01) < 0.2:\", 100 * np.sum(np.abs(M_th_cpu[:, 0, 1]) < 0.2)/M_th_cpu[:, 0, 1].size, \"%\")\n",
+    "            print(\"Percentage of abs(M_11) > 1.0:\", 100 * np.sum(np.abs(M_th_cpu[:, 1, 1]) > 1.0)/M_th_cpu[:, 1, 1].size, \"%\")\n",
     "\n",
-    "            #plotters_simple.plot_3d_double(theta, M_th[:, 0, 0], M_th[:, 0, 1], \"M_th vs. th\", \"00\", \"01\", \"th_0\", \"th_1\", \"M_th\", device)\n",
-    "            #plotters_simple.plot_3d_double(theta, M_th[:, 1, 0], M_th[:, 1, 1], \"M_th vs. th\", \"10\", \"11\", \"th_0\", \"th_1\", \"M_th\", device)\n",
-    "            \n",
-    "            plotters_simple.plot_3d_double(q, M_th_ana[:, 0, 0], M_th_ana[:, 0, 1], \"M_th_ana\", \"00\", \"01\", \"q_0\", \"q_1\", \"M_th\", device)\n",
-    "            plotters_simple.plot_3d_double(q, M_th_ana[:, 1, 0], M_th_ana[:, 1, 1], \"M_th_ana\", \"10\", \"11\", \"q_0\", \"q_1\", \"M_th\", device)\n",
+    "            plotters_simple.plot_3d_quad(theta, [M_th[:, 0, 0], M_th[:, 0, 1], M_th[:, 1, 0], M_th[:, 1, 1]], \"M_th vs th\", \n",
+    "                                         [\"M_th[0,0]\", \"M_th[0,1]\", \"M_th[1,0]\", \"M_th[1,1]\"], \"th_0\", \"th_1\", \"M_th\", folder_path)\n",
     "\n",
-    "            plotters_simple.plot_3d_double(theta, M_th_ana[:, 0, 0], M_th_ana[:, 0, 1], \"M_th_ana vs. th\", \"00\", \"01\", \"th_0\", \"th_1\", \"M_th\", device)\n",
-    "            plotters_simple.plot_3d_double(theta, M_th_ana[:, 1, 0], M_th_ana[:, 1, 1], \"M_th_ana vs. th\", \"10\", \"11\", \"th_0\", \"th_1\", \"M_th\", device)\n",
+    "            plotters_simple.plot_3d_quad(theta, [M_th_ana[:, 0, 0], M_th_ana[:, 0, 1], M_th_ana[:, 1, 0], M_th_ana[:, 1, 1]], \"M_th_ana vs th\", \n",
+    "                                         [\"M_th_ana[0,0]\", \"M_th_ana[0,1]\", \"M_th_ana[1,0]\", \"M_th_ana[1,1]\"], \"th_0\", \"th_1\", \"M_th_ana\", folder_path)\n",
+    "\n",
     "\n",
     "            #plotters_simple.plot_3d_double(q, J_h_ana[:, 0, 0], J_h[:, 0, 1], \"J_h\", \"00\", \"01\", \"q_0\", \"q_1\", \"J_h\", device)\n",
     "            #plotters_simple.plot_3d_double(q, J_h_ana[:, 1, 0], J_h[:, 1, 1], \"J_h\", \"10\", \"11\", \"q_0\", \"q_1\", \"J_h\", device)\n",
