--- a/Kian_code/Learning/Learn Transform.ipynb
+++ b/Kian_code/Learning/Learn Transform.ipynb
@@ -548,30 +548,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6e1aef2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def theta_1_single(model, q):\n",
-    "    theta = model.encoder_nn(q)[0]\n",
-    "    return theta[:, 0].detach()\n",
-    "    \n",
-    "def theta_2_single(model, q):\n",
-    "    theta = model.encoder_nn(q)[0]\n",
-    "    return theta[:, 1].detach()\n",
-    "    \n",
-    "def q_hat_1_single(model, theta):\n",
-    "    q_hat = model.decoder_nn(theta)[0]\n",
-    "    return q_hat[:, 0].detach()\n",
-    "    \n",
-    "def q_hat_2_single(model, theta):\n",
-    "    q_hat = model.decoder_nn(theta)[0]\n",
-    "    return q_hat[:, 1].detach()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "81624d9a",
    "metadata": {},
    "outputs": [],
@@ -624,10 +600,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def theta_1_single(model, q):\n",
+    "    print(\"q:\", q.size())\n",
+    "    theta = model.encoder(q)\n",
+    "    print(\"theta:\", theta.size())\n",
+    "    return theta[:, 0].detach()\n",
+    "    \n",
+    "def theta_2_single(model, q):\n",
+    "    theta = model.encoder(q)\n",
+    "    return theta[:, 1].detach()\n",
+    "    \n",
+    "def q_hat_1_single(model, theta):\n",
+    "    q_hat = model.decoder(theta)\n",
+    "    return q_hat[:, 0].detach()\n",
+    "    \n",
+    "def q_hat_2_single(model, theta):\n",
+    "    q_hat = model.decoder(theta)\n",
+    "    return q_hat[:, 1].detach()\n",
+    "\n",
+    "mapping_functions = (partial(theta_1_single,model), \n",
+    "                        partial(theta_2_single,model), \n",
+    "                        partial(q_hat_1_single,model), \n",
+    "                        partial(q_hat_2_single,model))\n",
     "th_plotter = theta_visualizer.theta_plotter(rp=rp, n_lines=50, device=device, \n",
     "                                            mapping_functions=mapping_functions, mask_split=q1_split)\n",
-    "#th_plotter.make_figure(\"theta_learned_full.png\")\n",
-    "#th_plotter.make_animation(\"theta_learned_full.mp4\", duration = 4, fps = 20)"
+    "theta_figure_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".png\")\n",
+    "th_plotter.make_figure(theta_figure_path)\n",
+    "theta_anim_path = os.path.join(dir_path, \"theta_mapping_\" + str(file_counter) + \".mp4\")\n",
+    "#th_plotter.make_animation(theta_anim_path, duration = 4, fps = 20)"
    ]
   },
   {
